007: html + basic layout

--- a/answer_example/007-notifications-search-and-menu/index.html
+++ b/answer_example/007-notifications-search-and-menu/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>007 - Notifications, Search and Menu</title>
-  <link rel="stylesheet" href="http://100dayscss.com/codepen/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  
+
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 			<input type="text" class="search-input" placeholder="Search ...">
 			<div class="fa fa-search search-icon"></div>
 		</div>
-		
+
 		<div class="notifications clearfix">
 			<div class="line"></div>
 			<div class="notification">
@@ -45,7 +45,7 @@
 			</div>
 		</div>
   </div>
-	
+
 	<div class="menu">
 		<ul>
 			<li><span class="fa fa-dashboard"></span>Dashboard</li>
@@ -55,7 +55,7 @@
 			<li><span class="fa fa-gear"></span>Settings</li>
 		</ul>
 	</div>
-	
+
 </div>
   <script src='http://100dayscss.com/codepen/js/jquery.min.js'></script>
 
