007: 主体部分的细节css

--- a/007-notifications-search-and-menu/index.html
+++ b/007-notifications-search-and-menu/index.html
@@ -22,27 +22,31 @@
   </div>
   <div class="notifications-card">
     <header>
-      <span>Menu</span>
-      <span>Notifications</span>
+      <span class="menu-icon">
+        <div class="menu-icon__dash">
+        </div>
+        <div class="menu-icon__dash"></div>
+      </span>
+      <span class="title">Notifications</span>
       <input placeholder="Search..."/>
       <span class="fa fa-search"></span>
     </header>
     <div class="notifications">
       <div class="notifications__item">
-        <time>9:24 AM</time>
-        <p>
-          <strong>John Walker</strong> posted a photo on your wall
+        <time class="item__time">9:24 AM</time>
+        <p class="item__content">
+          <strong>John Walker</strong> posted a photo on your wall.
         </p>
       </div>
       <div class="notifications__item">
-        <time>8:19 AM</time>
-        <p>
-          <strong>Alice Parker</strong>commented your last post.
+        <time class="item__time">8:19 AM</time>
+        <p class="item__content">
+          <strong>Alice Parker</strong> commented your last post.
         </p>
       </div>
       <div class="notifications__item">
-        <time>Yesterday</time>
-        <p>
+        <time class="item__time">Yesterday</time>
+        <p class="item__content">
           <strong>Luke Wayne</strong> added you as friend.
         </p>
       </div>
