--- a/008-metaballs/index.html
+++ b/008-metaballs/index.html
@@ -27,6 +27,7 @@
   <div class="droplet-7"></div>
   <div class="droplet-8"></div>
   <div class="droplet-9"></div>
+  <div class="droplet-10"></div>
   <script src="./js/main.js"></script>
 </div>
 </body>
