--- a/answer_example/013-user-gallery/index.html
+++ b/answer_example/013-user-gallery/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>013 - User Gallery</title>
-  <link rel="stylesheet" href="http://100dayscss.com/codepen/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  
+
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
